--- a/src/App.css
+++ b/src/App.css
@@ -3,138 +3,6 @@
   padding: 0px;
   box-sizing: border-box;
 }
-.header{
-  width: 100%;
-  height: 8vh;
-  background-color: #0f0f0f;
-
-  display: flex;
-  flex-direction: row;
-}
-
-.logo-container{
-  width: 25%;
-  height: 100%;
-
-  display: flex;
-  flex-direction: row;
-
-  align-items: center;
-  padding-left: 20px;
-  gap: 10px;
-}
-
-.hamburger{
-  width: 40px;
-  height: 40px;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.youtube-logo{
-
-  width: 90px;
-  height: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.search-container{
-  flex:1;
-  height: 100%;
-
-  display: flex;
-  flex-direction: row;
-  gap: 30px;
-  justify-content: center;
-  align-items: center;
-}
-
-.search-bar{
-  width: 70%;
-  height: 70%;
-
-  display: flex;
-  flex-direction: row;
-
-  align-items: center;
-  border-radius: 25px;  
-}
-
-.input{
-  flex: 1;
-  /* width: 500px; */
-  height: 100%;
-
-  padding-left: 20px;
-
-  font-family: Arial, Helvetica, sans-serif ;
-  font-size: 15px;
-  color: #f5f5f5;
-
-  background-color: transparent;
-  border: 2px solid #404040 ;
-
-  border-top-left-radius: 25px ;
-  border-bottom-left-radius: 25px;
-  
-}
-
-.search-btn{
-  width: 60px;
-  height: 100%;
-
-  background-color: #3e3d3d;
-
-  border: 2px solid #404040 ;
-
-  border-top-right-radius: 25px ;
-  border-bottom-right-radius: 25px;
-  border-left: none ;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  cursor: pointer;
-}
-
-.mic{
-  width: 45px;
-  height: 45px;
-
-  background-color: #3e3d3d;
-
-  border-radius: 100%;
-  border: 2px solid #404040 ;;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.options{
-  width: 250px;
-  height: 100%;
-
-  display: flex;
-  flex-direction: row;
-  gap: 30px;
-
-  justify-content: flex-end;
-  align-items: center;
-
-  padding-right: 25px;
-}
-
-.option{
-  width: 30px;
-  height: 30px;
-
-  border-radius: 100%;
-}
 
 .main{
   width: 100%;
@@ -143,714 +11,12 @@
   display: flex;
   flex-direction: row;
 
-  background-color: #1b1a1a;
-}
-
-.sidebar{
-  width: 18%;
-  height: auto;
-
-  background-color: #1b1a1a;
-
-  display: flex;
-  flex-direction: column;
-}
-
-.sidebar-menu-home{
-
-  width: 100%;
-  height: 180px;
-
-  display: flex;
-  flex-direction: column;
-
-
-  gap: 8px;
-
-  justify-content: center;
-  /* align-items: center; */
-  padding-left: 10px;
-}
-
-.sidebar-menu-items{
-  width: 90%;
-  height: 40px;
-
-  border-radius: 10px;
-
-  display: flex;
-  flex-direction: row;
-
-  align-items: center;
-  gap: 18px;
-
-  padding-left: 15px ;
-}
-
-.sidebar-menu-items:hover{
-  background-color: #343333;
-
-}
-
-.sidebar-menu-icons{
-  width: 20px;
-  height:20px;
-}
-
-.sidebar-menu-item{
-  width: 100px;
-  height: 35px;
-  
-  color: white;
-  padding-top: 10px;
-  font-size: 15px;
-  font-family: Arial, Helvetica, sans-serif ;
-}
-
-.horizontal-line{
-  width: 230px;
-  height: 0.5px;
-  padding-left: 15px;
-  background-color: #b3b2b2;
-}
-.sidebar-menu-options{
-
-  width: 100%;
-  height: 330px;
-
-  display: flex;
-  flex-direction: column;
-
-  gap: 8px;
-
-  justify-content: center;
-  padding-left: 10px;
-
-}
-
-.sidebar-menu-subscriptions{
-
-  width: 100%;
-  /* height: 295px; */
-
-  padding-left: 10px;
-  padding-top: 15px;
-
-  display: flex;
-  flex-direction: column;
-
-  gap: 10px;
-
-  justify-content: center;
-}
-.text{
-  font-size: 20px;
-  color: white;
-  padding-left: 10px;
-  padding-bottom: 10px;
-
-  font-family: Arial, Helvetica, sans-serif ;
-}
-.sidebar-menu-subscription{
-
-  width: 90%;
-  height: 40px;
-
-  border-radius: 10px;
-
-  display: flex;
-  flex-direction: row;
-
-  justify-content: center;
-  align-items: center;
-}
-.sidebar-menu-subscription:hover{
-  background-color: #343333;
-}
-.sidebar-menu-icon{
-  width: 25px;
-  height: 25px;
-
-  border-radius: 100%;
-  background-color: pink;
-}
-
-.sidebar-menu-text{
-  width: 170px;
-  height: 35px;
-
-  color: white;
-  padding-top: 10px;
-  padding-left: 12px;
-  font-size: 15px;
-  font-family: Arial, Helvetica, sans-serif ;
-}
-
-.sidebar-menu-notification{
-  width: 15px;
-  height: 35px;
-
-  padding-left: 5px;
-  padding-top: 5px;
-
-  padding-top: 15px;
-}
-
-.sidebar-menu-notification-icon{
-  width: 5px;
-  height: 5px;
-
-  background-color: #5151f3;
-  border-radius: 100%;
-
+  /* gap: 10px; */
+  background-color: #0f0f0f;
 }
 
 .content{
   width: 82%;
-  height: auto;    
+  height: auto;   
 }
 
-.scroll-menu{
-  width: 100%;
-  height: 60px;
-
-  background-color: #1b1a1a;
-
-  display: flex;
-  flex-direction: row;
-
-  justify-content: center;
-  align-items: center;
-}
-
-.scroll-options{
-  /* flex:1; */
-  width: 95%;
-  height: 60px;
-
-  display: flex;
-  flex-direction: row;
-  gap:10px;
-
-  padding-left: 10px;
-  align-items: center;
-}
-
-.scroll-option{
-  width: auto;
-  height: 25px;
-  background-color: #6e6d6d;
-  border-radius: 5px;
-
-  color: whitesmoke;
-  font-size:15px;
-  font-family: Arial, Helvetica, sans-serif ;
-
-  display: flex;
-  flex-direction: row;
-
-  align-items: center;
-
-  padding: 2px 7px;
-}
-
-.scroll-right{
-  width: 50px;
-  height: 50px;
-
-  border-radius: 100%;
-
-  display: flex;
-
-  justify-content: center;
-  align-items: center;
-
-
-}
-
-.arrow{
-  width: 35px;
-  height: 35px;
-}
-
-.videos-container{
-  width: 100%;
-  height: 92.5%;
-
-  display: flex;
-  flex-direction: row;
-
-  gap: 10px;
-  flex-wrap: wrap;
-
-  padding-top: 10px;
-  padding-right: 10px;
-  padding-left: 10px;
-
-
-}
-
-.video-container{
-  
-
-  flex: 1;
-  flex-basis: 300px;
-  height: 320px;
-
-  display: flex;
-  flex-direction: column;
-
-  gap:10px;
-
-  justify-content: center;
-
-}
-
-
-
-/*
-
-.video-container{
-  width: 30%;
-  height: 320px;
-
-  display: flex;
-  flex-direction: column;
-
-  gap:10px;
-
-  justify-content: center;
-} */
-
-.video-img{
-  width: 100%;
-  height: 210px;
-
-  border-radius: 10px;
-
-}
-
-.video-description{
-  width: 100%;
-  height: 100px;
-
-  display: flex;
-  flex-direction: row;
-}
-
-.video-profile-img{
-
-  width: 20%;
-  height: 100%;
-
-  display: flex;
-
-  justify-content: center;
-  padding-top: 3px;
-}
-
-.profile-img{
-  width: 80%;
-  height: 55px;
-
-  border-radius: 100%;
-}
-
-.video-desc{
-
-  width: 80%;
-  height: 100%;
-
-  display: flex;
-  flex-direction: column;
-
-  gap: 2px;
-}
-
-.description{
-  width: 100%;
-  height: 45px;
-
-  color: white;
-  padding-top: 5px;
-  padding-left: 5px;
-}
-
-.video-channel-name{
-  width: 100%;
-  height: 25px;
-
-  display: flex;
-  flex-direction: row;
-
-  align-items: center;
-}
-
-.channel-name{
-  width: auto;
-  height: 25px;
-
-  color: #d9d4d4;
-  padding-top: 2px;
-  padding-left: 5px;
-  padding-right: 5px;
-}
-
-.channel-verified{
-  width: 6%;
-  height: 18px;
-
-  border-radius: 100%;
-}
-
-.video-reach{
-  width: 100%;
-  height: 25px;
-
-  display: flex;
-  flex-direction: row;
-}
-
-.video-views{
-  width: auto;
-  height: 25px;
-
-  color: #d9d4d4;
-
-  padding-top: 3px ;
-  padding-left: 5px;
-  padding-right: 5px;
-}
-
-.dot{
-  width: 2px;
-  height: 2px;
-  background-color: #d9d4d4;
-
-  margin-bottom: 2px ;
-  border-radius: 100%;
-  
-}
-.video-update-time{
-  width: 35%;
-  height: 25px;
-
-  color: #d9d4d4;
-  
-  padding-top: 3px ;
-  padding-left: 5px;
-}
-
-.videos-search-result-container{
-
-  width: 100%;
-  height: auto;
-  /* background-color: yellow; */
-
-  display: flex;
-  flex-direction: column;
-  gap:20px;
-  padding-top: 10px;
-
-  text-decoration: none;
-}
-
-.video-search-result-container{
-
-  width: 100%;
-  height: 220px;
-
-  display: flex;
-  gap: 10px;
-}
-.video-search-result-container-img{
-  width: 30%;
-  height: 100%;
-  border-radius: 10px;
-}
-.video-search-result-description{
-
-  width: 65%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  /* background-color: blue; */
-
-}
-
-.video-search-result-short-description{
-
-  width: 100%;
-  /* height: 100%; */
-
-  font-size: 1.25rem;
-  /* line-height: 2.2rem; */
-  font-weight: 400;
-  color: whitesmoke;
-}
-
-.video-search-result-reach{
-
-  width: 200px;
-  height: 20px;
-
-  display: flex;
-  /* justify-content: center; */
-  align-items: center;
-
-  padding-top:2px;
-  gap: 5px;
-  color: whitesmoke;
-}
-
-.video-search-result-views{
-  width: auto;
-  height: 20px;
-  font-size: 12px;
-}
-
-.video-search-result-update-time{
-  width: auto;
-  height: 20px;
-
-  color: whitesmoke;
-  font-size: 12px;
-
-}
-
-.video-search-result-channel-name{
-  /* width: 100%; */
-  /* height: 20%; */
-
-  display: flex;
-  flex-direction: row;
-  padding-top: 5px;
-
-  align-items: center;
-  gap: 8px;
-}
-
-.search-result-channel-profile-picture{
-  width: 30px;
-  height: 30px;
-
-  border-radius: 50%;
-}
-
-.search-result-channel-name{
-  font-size: 14px;
-  color: whitesmoke;
-}
-
-.search-result-channel-verified{
-  width: 14px;
-  height: 14px;
-}
-
-.video-search-result-long-description{
-
-  color: whitesmoke;
-  padding-top: 15px;
-
-  font-size: 12px;
-}
-
-.video-watch{
-
-  display: flex;
-  flex-direction: column;
-}
-
-.watch-videos{
-  width: 100%;
-  height: 825px;
-
-  background-color: #020202;
-  display: flex;
-  flex-direction: row;
-  gap:20px;
-  padding: 20px 0px 20px 20px;
-}
-
-.watch-video{
-  width: 65%; 
-  height: 100%;
-
-  /* background-color: yellow; */
-}
-
-.video-suggestions{
-
-  width: 30%;
-  height: 100%;
-
-  background-color: green;
-}
-
-.video{
-
-  width: 100%;
-  height: 400px;
-
-  /* background-color: red; */
-}
-
-.video-player{
-
-  width: 100%;
-  height: 550px;
-  border-radius: 15px;
-}
-
-.video-watch-description{
-
-  width: 100%;
-  height: 90px;
-  /* background-color: red; */
-}
-
-.video-title{
-
-  width: 100%;
-  height: auto;
-  font-size: 20px;
-  font-weight: bold;
-  color: whitesmoke;
-  padding: 3px;
-}
-
-.video-details{
-  width: 100%;
-  height: 60px;
-
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.video-channel-info{
-
-  width: 40%;
-  height: 100%;
-
-  display: flex;
-  flex-direction: row;
-
-  align-items: center;
-  gap: 5px;
-}
-
-.video-channel-image{
-  width: 40px;
-  height: 40px;
-}
-
-.video-channel-details{
-  width: 50%;
-  height: 100%;
-  
-  display: flex;
-  flex-direction: column;
-
-  /* justify-content: center; */
-  padding-top: 5px;
-  color: whitesmoke;
-
-}
-
-.video-channel-name{
-  font-size: 14px;
-  font-weight: bold;
-}
-
-.video-subscribers{
-  font-size: 10px;
-}
-
-.video-channel-subscribe-button{
-
-  width: 120px;
-  /* height: 30px; */
-  padding: 12px 10px;
-  border: none;
-  border-radius: 25px;
-  font-weight: bold;
-  cursor: pointer;
-}
-.video-options{
-  width: 45%;
-  height: 100%;
-
-  /* background-color: green; */
-  display: flex;
-  flex-direction: row;
-
-  justify-content: flex-end;
-  align-items: center;
-  gap:10px;
-  padding-right: 10px ;
-}
-
-.video-feedback{
-  width: 25%;
-  height: 65%;
-  border-radius: 25px;
-  padding: 10px;
-  background-color: #282828;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  gap: 5px;
-  color: white;
-}
-
-.video-like, .video-dislike{
-  width: 24px;
-  height: 24px;
-}
-
-.video-download{
-
-  width: 30%;
-  height: 65%;
-  background-color: #282828;
-  border-radius: 25px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 5px;
-  color: whitesmoke;
-  font-weight: bold;
-}
-
-.video-share{
-  width: 25%;
-  height: 65%;
-  background-color: #282828;
-  border-radius: 25px;
-
-  display: flex;
-  flex-direction: row;
-
-  justify-content: center;
-  align-items: center;
-  gap:8px;
-  color: whitesmoke;
-  font-weight: bold;
-}
-
-.video-more-options{
-
-  width: 10%;
-  height: 65%;
-  background-color: #282828;
-  border-radius: 100%;
-  color: whitesmoke;
-  font-weight: bold;
-  display: flex;
-  flex-direction:row;
-  justify-content: center;
-  align-items: center;
-}
